model-serving/llama-guard/llama-guard-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  name: llama-guard-3-1b
  labels:
    app: llama-guard-3-1b
spec:
  path: /
  to:
    kind: Service
    name: llama-guard-3-1b-predictor
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
